version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/Results/CompositeFailureResults/LaRCSettings.rst.txt
.. vale off



:class:`LaRCSettings`
=====================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.Results.CompositeFailureResults.LaRCSettings(internalObject: Ansys.Common.Interop.DSObjectsAuto.IDSCompositeFailureCriteriaAuto)

   Bases: :py:obj:`object`


   
   Defines the configuration for the LaRC failure criterion for reinforced materials
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: LaRCSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Reset`
            - Resets the settings to their default values.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Active`
            - Active property.
          * - :py:attr:`~EvaluateFiberCompressionFailure`
            - Gets or sets whether fiber compression failure is evaluated. The corresponding failure label is 'lfc4/6'.
          * - :py:attr:`~EvaluateFiberTensionFailure`
            - Gets or sets whether fiber tension failure is evaluated. The corresponding failure label is 'ltf3'.
          * - :py:attr:`~EvaluateMatrixCompressionFailure`
            - Gets or sets whether matrix compression failure is evaluated. The corresponding failure label is 'lmc2/5'.
          * - :py:attr:`~EvaluateMatrixTensionFailure`
            - Gets or sets whether matrix tension failure is evaluated. The corresponding failure label is 'lmt1'.
          * - :py:attr:`~FiberCompressionFailureWeightingFactor`
            - Gets or sets the weighting factor for the fiber compression failure (lfc4/6) evaluation.
          * - :py:attr:`~FiberTensionFailureWeightingFactor`
            - Gets or sets the weighting factor for the fiber tension failure (ltf3) evaluation.
          * - :py:attr:`~Formulation`
            - Gets or sets whether the failure criterion is evaluated only in-plane (2D),
          * - :py:attr:`~MatrixCompressionFailureWeightingFactor`
            - Gets or sets the weighting factor for the matrix compression failure (lmc2/5) evaluation.
          * - :py:attr:`~MatrixTensionFailureWeightingFactor`
            - Gets or sets the weighting factor for the matrix tension failure (lmt1) evaluation.







Property detail
---------------
.. py:property:: Active
   :type: Optional[bool]


   
   Active property.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateFiberCompressionFailure
   :type: Optional[bool]


   
   Gets or sets whether fiber compression failure is evaluated. The corresponding failure label is 'lfc4/6'.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateFiberTensionFailure
   :type: Optional[bool]


   
   Gets or sets whether fiber tension failure is evaluated. The corresponding failure label is 'ltf3'.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateMatrixCompressionFailure
   :type: Optional[bool]


   
   Gets or sets whether matrix compression failure is evaluated. The corresponding failure label is 'lmc2/5'.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateMatrixTensionFailure
   :type: Optional[bool]


   
   Gets or sets whether matrix tension failure is evaluated. The corresponding failure label is 'lmt1'.
















   ..
       !! processed by numpydoc !!

.. py:property:: FiberCompressionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the fiber compression failure (lfc4/6) evaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: FiberTensionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the fiber tension failure (ltf3) evaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: Formulation
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.CompositeFailure.LaRCFormulation]


   
   Gets or sets whether the failure criterion is evaluated only in-plane (2D),
       or also in the out-of-plane direction (3D).
















   ..
       !! processed by numpydoc !!

.. py:property:: MatrixCompressionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the matrix compression failure (lmc2/5) evaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: MatrixTensionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the matrix tension failure (lmt1) evaluation.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Reset() -> None

   
   Resets the settings to their default values.

   ..
       !! processed by numpydoc !!



.. vale on